--- a/index.html
+++ b/index.html
@@ -267,6 +267,8 @@
           </div>
         </div>
 
+<!-- Move the 60% to the start or remove it-->
+
         <div class="people-wrapper-outer sixty-percent-people infobox infobox-close">
           <div id="sixty-percent" class="people-wrapper center-sticky">
             <div class="people-label bubble">Bottom 60% <div class="people-sub-label">(Scroll Down)</div></div>
@@ -276,16 +278,19 @@
 
         <div class="infobox infobox text-infobox intro">
           <div class="title">
-            <p>A trillion dollars is such a large figure, that you might as well say "eleventy gajillion zillion dollars."  So in this section, we will try to understand the scale of this figure by looking at what could be accomplished with various chunks of this wealth.</p>
+            <p></p>
+<!-- orignally: A trillion dollars is such a large figure, that you might as well say "eleventy gajillion zillion dollars."  So in this section, we will try to understand the scale of this figure by looking at what could be accomplished with various chunks of this wealth. -->
           </div>
         </div>
 
         <div class="infobox text-infobox infobox-close">
           <div class="title">
-            Some will argue that using this wealth for public benefit is not possible, because it's "tied up" in stocks, and therefore inaccessible. <a href="https://github.com/MKorostoff/1-pixel-wealth/blob/master/THE_PAPER_BILLIONAIRE.md" target="_blank">This is just not true</a>.
+           </a>.
+<!--Some will argue that using this wealth for public benefit is not possible, because it's "tied up" in stocks, and therefore inaccessible. <a href="https://github.com/MKorostoff/1-pixel-wealth/blob/master/THE_PAPER_BILLIONAIRE.md" target="_blank">This is just not true -->
           </div>
         </div>
 
+<!--
         <div class="infobox text-infobox infobox-close">
           <div class="title">
             <p>As we proceed, try to keep in mind: all of this wealth is controlled by a group so small, that they could fit on a single 747 airplane&#8212;with 260 seats left over.</p>
@@ -299,7 +304,7 @@
             </div>
           </div>
         </div>
-
+-->
         <div class="infobox text-infobox infobox-half">
           <h2 class="title what-could-we-do">What could we do with under 10% of this money?</h2>
         </div>
@@ -591,12 +596,14 @@
           </div>
         </div>
 
+
         <div class="infobox text-infobox infobox-close">
           <div class="title">
             These programs combined would completely transform our world. By redistributing this wealth, millions of lives would be saved. Billions would be rescued from poverty and disease. By inconveniencing <em>just 400 people</em>, the entire human race could advance to a new, unprecedented level of development.
           </div>
         </div>
-
+        
+<!--
         <div class="infobox text-infobox infobox-close all-of-them">
           <div class="title">
             And <em>all</em> of them would still be billionaires afterwards.
@@ -608,9 +615,9 @@
             Is it really so radical to suggest that this is the right thing to do? Given the choice between millions of deaths, and slightly shrinking the fortunes of a few super rich people, how could anyone conclude that the death of millions is preferable?
           </div>
         </div>
-
+-->
         <div class="infobox text-infobox infobox-half">
-          <h2 class="title what-could-we-do">We cannot accept this level of inequality any longer.</h2>
+          <h2 class="title what-could-we-do">Is there any conclusions that can be made about inequality?</h2>
         </div>
 
       </div>
