--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="wealth-wrapper-outer">
     <div class="wealth-row wealth-row-one">
       <div class="title-screen">
-        <h1>Wealth shown to scale</h1>
+        <h1>Wealth Shown To Scale (Adapted For Classrooms)</h1>
         <div class="scroll-this-way">
           <span>scroll right</span>
           <div id="instructions" class="instructions">To scroll right, use shift + mousewheel. If you have a touchpad, swipe sideways.</div>
@@ -602,7 +602,7 @@
             These programs combined would completely transform our world. By redistributing this wealth, millions of lives would be saved. Billions would be rescued from poverty and disease. By inconveniencing <em>just 400 people</em>, the entire human race could advance to a new, unprecedented level of development.
           </div>
         </div>
-        
+
 <!--
         <div class="infobox text-infobox infobox-close all-of-them">
           <div class="title">
