--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@mkorostoff">
   <meta name="twitter:creator" content="@mkorostoff">
-  <meta name="twitter:title" content="Wealth, shown to scale">
+  <meta name="twitter:title" content="Wealth, shown to scale (Adapted for Classroom)">
   <meta name="twitter:description" content="Inequality in the United States is out of control. Here we visualize the issue in a unique way.">
   <meta name="twitter:image" content="https://mkorostoff.github.io/1-pixel-wealth/img/off-the-chart.png">
 
@@ -25,7 +25,7 @@
   <div class="wealth-wrapper-outer">
     <div class="wealth-row wealth-row-one">
       <div class="title-screen">
-        <h1>Wealth Shown To Scale (Adapted For Classrooms)</h1>
+        <h1>Wealth Shown To Scale <h1>
         <div class="scroll-this-way">
           <span>scroll right</span>
           <div id="instructions" class="instructions">To scroll right, use shift + mousewheel. If you have a touchpad, swipe sideways.</div>
@@ -42,13 +42,46 @@
       </div>
 
       <div class="wealth-wrapper median">
-        <h2 class="wealth-title">$68,000 <span class="explainer">(Median US household income)</span></h2>
+        <h2 class="wealth-title">$68,000 <span class="explainer">(Median US household income in 2021)</span></h2>
         <div class="wealth median-income"></div>
       </div>
 
       <div class="wealth-wrapper million">
         <h2 class="wealth-title">$1 million</h2>
         <div class="wealth"></div>
+        </div>
+
+
+      <div class="wealth-wrapper lawyer">
+        <h2 class="title">Lifetime earnings of a lawyer, on average <span class="explainer">($4 million)</span></h2>
+        <div class="wealth">
+        </div>
+      </div>
+
+      <div class="wealth-wrapper doctor">
+        <h2 class="title">Lifetime earnings of a doctor, on average <span class="explainer">($6.7 million)</span></h2>
+        <div class="wealth">
+        </div>
+      </div>
+
+      <div class="wealth-wrapper goldman">
+          <h2 class="title">Goldman Sachs CEO David Solomon's Net Worth <span class="explainer">($50 million)</span></h2>
+          <div class="wealth">
+        </div>
+      </div>
+     
+      <div class="wealth-wrapper hedgefund">
+        <h2 class="title">Average Hedgefund Manager's Net Worth </h2> 
+          
+          <span class="explainer">($50 million)</span></h2>
+        <div class="wealth">
+        </div>
+      </div>
+
+      <div class="wealth-wrapper tim-cook">
+        <h2 class="title">Apple CEO, Tim Cook's Net Worth <span class="explainer">($625 million)</span></h2>
+        <div class="wealth">
+        </div>
       </div>
 
       <div class="wealth-wrapper billion">
@@ -57,7 +90,14 @@
         </div>
       </div>
 
-      <div name="bezos" class="wealth-wrapper bezos">
+      <div class="wealth-wrapper taylor">
+        <div class="wealth">
+          <h2 class="title">Taylor Swift's Net Worth <span class="explainer">($1.1 billion)</span></h2>
+        </div>
+      </div>
+
+
+      <div name="bezos" class="wealth-wrapper-2 bezos">
         <div id="bezos" class="wealth ruler">
           <h2 class="wealth-title">$185 billion (wealth of Jeff Bezos)</h2>
           <div class="counter" id="bezos-counter"></div>
