--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <div class="wealth-row wealth-row-one">
       <div class="title-screen">
         <h1>Wealth Shown To Scale <h1>
+          <center> <h6>(Adapted for Classroom)</h6> </center>
+<!-- Make this font smaller like a subtitle
+Move it closer if possible??
+-->
         <div class="scroll-this-way">
           <span>scroll right</span>
           <div id="instructions" class="instructions">To scroll right, use shift + mousewheel. If you have a touchpad, swipe sideways.</div>
