--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ Move it closer if possible??
     </div>
   </div>
   <div class="footer">
-    <div>Updated April 3, 2021, Adapted March 1, 2024. <a target="_blank" href="https://github.com/PLACEHOLDER">About this page</a></div>
+    <div>Updated April 3, 2021, Adapted March 1, 2024. <a target="_blank" href="https://github.com/OADouglas/Wealth-To-Scale-Adapted-For-Classroom">About this page</a></div>
     <div class="also">Also checkout: <a href="https://github.com/MKorostoff/1-pixel-wealth/blob/master/README.md" target="_blank">Original Site</a></div>
   </div>
 
