--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Move it closer if possible??
       </div>
      
       <div class="wealth-wrapper hedgefund">
-        <h2 class="title">Average Hedgefund Manager's Net Worth </h2> 
+        <h2 class="title">Average Hedgefund Manager's Lifetime Earnings </h2> 
           
           <span class="explainer">($50 million)</span></h2>
         <div class="wealth">
