--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Move it closer if possible??
 
       <div class="wealth-wrapper taylor">
         <div class="wealth">
-          <h2 class="title" >Taylor Swift's Net Worth <span class="explainer">($1.1 billion)</span></h2>
+          <h2 class="title" style="text-align:top" >Taylor Swift's Net Worth <span class="explainer">($1.1 billion)</span></h2>
         </div>
       </div>
 
