Edits on the page

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@ Move it closer if possible??
       </div>
      
       <div class="wealth-wrapper hedgefund">
-        <h2 class="title">Average Hedgefund Manager's Lifetime Earnings </h2> 
-          
+        <h2 class="title">Average hedgefund manager's lifetime earnings </h2> 
           <span class="explainer">($50 million)</span></h2>
         <div class="wealth">
         </div>
@@ -96,12 +95,12 @@ Move it closer if possible??
 
       <div class="wealth-wrapper taylor">
         <div class="wealth">
-          <h2 class="title">Taylor Swift's Net Worth <span class="explainer">($1.1 billion)</span></h2>
+          <h2 class="wealth-title">Taylor Swift's Net Worth <span class="explainer">($1.1 billion)</h2>
         </div>
       </div>
 
 
-      <div name="bezos" class="wealth-wrapper-2 bezos">
+      <div name="bezos" class="wealth-wrapper bezos">
         <div id="bezos" class="wealth ruler">
           <h2 class="wealth-title">$185 billion (wealth of Jeff Bezos)</h2>
           <div class="counter" id="bezos-counter"></div>
